# ai-kickstart-mlops

./: .gitignore  Dockerfile  README.md  dagster_daemon.Dockerfile  dagster_grpc.Dockerfile  dagster_production.yaml  pyproject.toml  requirements.txt  workspace.yaml
src/ames_housing/: __init__.py  constants.py  model_factory.py  utils.py
src/ames_housing/assets/: ames_housing_data.py  ames_housing_features.py  price_prediction_model.py  price_prediction_models.py  train_test.py
src/ames_housing/io_managers/: base_fs_io_manager.py  base_lakefs_io_manager.py  csv_fs_io_manager.py  csv_lakefs_io_manager.py  pickle_fs_io_manager.py  pickle_lakefs_io_manager.py
src/ames_housing/resources/: csv_data_set_loader.py  mlflow_session.py
stack/: dagster_docker-compose.yml  docker-compose.yml
