[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-kickstart-mlops"
description = ""
version = "0.1.0"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
	{ name = "appliedAI Institute for Europe", email = "opensource@appliedai-institute.de" }
]
maintainers = [
	{ name = "Jan Willem Kleinrouweler", email = "janwillem@appliedai-institute.de" }
]
requires-python = ">=3.9"
dependencies = [
	"dagster==1.6.6",
	"dagster-webserver==1.6.6",
	"dagster-postgres==0.22.6",
	"pandas==2.2.0",
	"case-converter==1.1.0",
	"scikit-learn==1.4.0",
	"joblib==1.3.2",
	"mlflow==2.13.1",
	"lakefs-spec==0.7.0",
]

[project.optional-dependencies]

dev = ["black", "ruff", "ruff-lsp"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.dagster]
ignore = ["E501", "F841"]
